# i2c_ble_peripheral_fork

./: CMakeLists.txt  nrf54l15dk_nrf54l15_cpuapp.overlay  prj.conf
src/: lps22.c  main.c
src/inc/: lps22.h
src/services/: ble_shs.c  ble_shs.h
